--- a/src/app/ma_vendedora/tab_transporte/camionetas/camionetas.page.html
+++ b/src/app/ma_vendedora/tab_transporte/camionetas/camionetas.page.html
@@ -25,10 +25,9 @@
       </ion-thumbnail>
 
       <ion-label>
-        <h4>{{camioneta.name}}</h4>{{camioneta.description}}<p>{{camioneta.users_id}}</p>
-        <p>{{camioneta.car_plate}}</p>
+        <div class="text-bold text-color-brown">{{camioneta.name}}</div><div class="text-bold text-color-purple"> {{camioneta.description}} </div><div class="text-color-purple">{{camioneta.users_id}}</div>
+        <div class="text-color-brown">{{camioneta.car_plate}}</div>
       </ion-label>
     </ion-item>
-
   </ion-card>
 </ion-content>
