--- a/src/app/ma_acopiadora/geolocalizacion/geolocalizacion.page.scss
+++ b/src/app/ma_acopiadora/geolocalizacion/geolocalizacion.page.scss
@@ -5,3 +5,12 @@
   justify-content: center;
   align-items: center;
 }
+
+.center-days{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  // height: 100%;
+  justify-content: center;
+  align-items: center;
+}
