--- a/src/app/ma_acopiadora/tab-crear-acopio/tab-crear-acopio.page.scss
+++ b/src/app/ma_acopiadora/tab-crear-acopio/tab-crear-acopio.page.scss
@@ -14,3 +14,18 @@
   justify-content: center;
   align-items: center;
 }
+.center-days{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  // height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.container-item-in{
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: row;
+padding-bottom: 5%;
+}
