--- a/src/app/login/inicio/inicio.page.scss
+++ b/src/app/login/inicio/inicio.page.scss
@@ -5,6 +5,10 @@
     justify-content: center;
     align-items: center;
 }
+.error-validate{
+    color: #F06363 ;
+    font-size: 12px;
+    }
 
 // ion-list.list-md{
 //     color:  var(--warmin-color-purple);
