--- a/src/app/c_bus/menu/menu.page.html
+++ b/src/app/c_bus/menu/menu.page.html
@@ -6,7 +6,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="paradas">
-      <ion-icon src="/assets/iconos/nothing.svg"></ion-icon>
+      <ion-icon src="/assets/iconos/o_parada.svg"></ion-icon>
       <ion-label class="text-color-purple text-bold">Parada</ion-label>
     </ion-tab-button>
 
