--- a/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.html
+++ b/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.html
@@ -3,7 +3,7 @@
     <div class="contenedor-header-icon">
       <!-- Contenedor 1 -->
       <div class="contenedor-header-config">
-        <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/agricultor.svg">
+        <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/w_perfil.svg">
         </ion-icon>
         <div class="texto-header">Perfil mujer agricultora</div>
       </div>
