--- a/src/app/consumidor/tab_carrito/carrito/carrito.page.html
+++ b/src/app/consumidor/tab_carrito/carrito/carrito.page.html
@@ -2,7 +2,7 @@
   <div class="border-top-page">
 
     <div class="contenedor-header">
-      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/store.svg">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/w_car.svg">
       </ion-icon>
       <div class="texto-header">Carrito de compra</div>
     </div>
