--- a/src/app/consumidor/tab_mis_ordenes/mis-ordenes/mis-ordenes.page.html
+++ b/src/app/consumidor/tab_mis_ordenes/mis-ordenes/mis-ordenes.page.html
@@ -7,7 +7,7 @@
   <div class="border-top-page">
     <!-- Contenedor 1 -->
     <div class="contenedor-header">
-      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/login.svg">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/w_store_1.svg">
       </ion-icon>
       <div class="texto-header">Mis órdenes</div>
     </div>
