--- a/src/app/ma_acopiadora/geolocalizacion/geolocalizacion.page.html
+++ b/src/app/ma_acopiadora/geolocalizacion/geolocalizacion.page.html
@@ -45,7 +45,7 @@
       <div class="border-top-page">
         <!-- Contenedor 1 -->
         <div class="contenedor-header">
-          <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/store.svg">
+          <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/w_acopio.svg">
           </ion-icon>
           <div class="texto-header">Asociación</div>
         </div>
