--- a/src/app/ma_lideresa/menu/menu.page.html
+++ b/src/app/ma_lideresa/menu/menu.page.html
@@ -11,7 +11,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="invitacion">
-      <ion-icon src="/assets/iconos/logo_fullcolor.svg"></ion-icon>
+      <ion-icon src="/assets/iconos/o_invit.svg"></ion-icon>
       <ion-label class="text-color-purple text-bold">Invitación</ion-label>
     </ion-tab-button>
 
