--- a/src/app/ma_lideresa/tab_agricultoras/perfil/perfil.page.html
+++ b/src/app/ma_lideresa/tab_agricultoras/perfil/perfil.page.html
@@ -8,7 +8,7 @@
   <div class="border-top-page">
     <!-- Contenedor 1 -->
     <div class="contenedor-header">
-      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/w_perfil.svg">
       </ion-icon>
       <div class="texto-header">Perfil Mujer agricultora</div>
     </div>    
