--- a/src/app/ma_lideresa/tab_invitaciones/edicion/edicion.page.html
+++ b/src/app/ma_lideresa/tab_invitaciones/edicion/edicion.page.html
@@ -3,42 +3,72 @@
     <ion-title>Editar Invitación</ion-title>
   </ion-toolbar>
 </ion-header> -->
-<ion-content >
+<ion-content>
   <div class="border-top-page">
     <!-- Contenedor 1 -->
     <div class="contenedor-header">
       <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
       </ion-icon>
       <div class="texto-header">Editar Invitación</div>
-    </div>    
+    </div>
   </div>
 
-<ion-card>  
-  <ion-item>
+  <ion-card>
+    <!-- <ion-item>
     <ion-label position="stacked">Nombre de la asociación</ion-label>
     <ion-input [(ngModel)]="name" name="name">{{name}}</ion-input>
-  </ion-item>
-<ion-card>
-  <ion-card-title class="title">
+  </ion-item> -->
+    <div class="contenedor-item ">
+      <ion-icon slot="start" class="size-icon" src="/assets/iconos/o_acopio.svg"></ion-icon>
+      <ion-item lines="none" class="input-border-bot item-native-transparency">
+        <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">
+          Nombre de la asociación</ion-label>
+        <ion-input [(ngModel)]="name" name="name" class="text-center">
+        </ion-input>
+      </ion-item>
+    </div>
+
+    <ion-card>
+      <!-- <ion-card-title class="title">
     Ventajas
   </ion-card-title>
   
-    <ion-textarea [(ngModel)]="advantages" name="advantages" value="{{advantages}}"></ion-textarea>
+    <ion-textarea [(ngModel)]="advantages" name="advantages" value="{{advantages}}"></ion-textarea> -->
+      <div class="contenedor-item ">
+        <!-- <ion-icon slot="start" class="size-icon" src="/assets/iconos/o_acopio.svg"></ion-icon> -->
+        <ion-item lines="none" class="input-border-bot item-native-transparency">
+          <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">
+            Ventajas</ion-label>
+          <ion-textarea [(ngModel)]="advantages" name="advantages" value="{{advantages}}" class="text-center">
+          </ion-textarea>
+        </ion-item>
+      </div>
+    </ion-card>
+    <ion-card>
+      <!-- <ion-card-title class="title">
+        Reglas
+      </ion-card-title>
+      <ion-textarea [(ngModel)]="rules" name="rules" value="{{rules}}"></ion-textarea> -->
+      <div class="contenedor-item ">
+        <!-- <ion-icon slot="start" class="size-icon" src="/assets/iconos/o_acopio.svg"></ion-icon> -->
+        <ion-item lines="none" class="input-border-bot item-native-transparency">
+          <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">
+            Reglas</ion-label>
+          <ion-textarea [(ngModel)]="rules" name="rules" value="{{rules}}" class="text-center">
+          </ion-textarea>     
+        </ion-item>
+      </div>
 
-</ion-card>
-<ion-card>
-  <ion-card-title class="title">
-    Reglas
-  </ion-card-title>
-     <ion-textarea [(ngModel)]="rules" name="rules" value="{{rules}}"></ion-textarea>
-</ion-card>
-</ion-card>
-<ion-card class="tam-map">
-  <app-googlemaps [posicionEdit]="posicionEdit" [localizacion]="localizacion" (enviar)="recibirData($event)" [feature]="feature"></app-googlemaps>
-</ion-card>
+    </ion-card>
+  </ion-card>
+  <ion-card class="tam-map">
+    <app-googlemaps [posicionEdit]="posicionEdit" [localizacion]="localizacion" (enviar)="recibirData($event)"
+      [feature]="feature"></app-googlemaps>
+  </ion-card>
 
-<ion-button expand="block" class="boton-warmi-in" (click)="addAsociation()"><ion-icon></ion-icon> &nbsp; &nbsp;Ordenar</ion-button>
-        
-  
+  <ion-button expand="block" class="boton-warmi-in" (click)="addAsociation()">
+    <ion-icon></ion-icon> &nbsp; &nbsp;Ordenar
+  </ion-button>
+
+
 </ion-content>
-
