--- a/src/app/ma_lideresa/tab_notificaciones/lista/lista.page.html
+++ b/src/app/ma_lideresa/tab_notificaciones/lista/lista.page.html
@@ -2,7 +2,7 @@
   <div class="border-top-page">
     <!-- Contenedor 1 -->
     <div class="contenedor-header">
-      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/w_world.svg">
       </ion-icon>
       <div class="texto-header">Notificaciones</div>
     </div>    
