--- a/src/app/c_bus/paradas/paradas.page.html
+++ b/src/app/c_bus/paradas/paradas.page.html
@@ -2,7 +2,7 @@
   <div class="border-top-page">
     <!-- Contenedor 1 -->
     <div class="contenedor-header">
-      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/o_parada.svg">
       </ion-icon>
       <div class="texto-header">Paradas</div>
     </div>
