--- a/src/app/c_camioneta/geolocalizacion/geolocalizacion.page.html
+++ b/src/app/c_camioneta/geolocalizacion/geolocalizacion.page.html
@@ -44,8 +44,8 @@
       <div class="border-top-page">
         <!-- Contenedor 1 -->
         <div class="contenedor-header">
-          <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/store.svg">
-          </ion-icon>
+          <!-- <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/store.svg">
+          </ion-icon> -->
           <div class="texto-header">Camioneta</div>
         </div>
       </div>
@@ -53,24 +53,51 @@
           <br>
           <h4 class="text-center size-text35px text-bold text-color-purple">Ingresa los datos requeridos</h4>
           <form>
-        <ion-list>
-          <ion-card>  
-            <ion-item>
+        <!-- <ion-list> -->
+          <!-- <ion-card>   -->
+            <!-- <ion-item>
               <ion-label position="stacked" style="color: var(warmis-color-purple);">Placa:</ion-label>
               <ion-input [(ngModel)]="car_plate" name="car_plate"></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label position="stacked" class="text-color-purple">Descripción:</ion-label>
-              <ion-input [(ngModel)]="description" name="description"></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label position="stacked"class="text-color-purple">Color:</ion-label>
-              <ion-input [(ngModel)]="color" name="color"></ion-input>
-            </ion-item>
+            </ion-item> -->
+            <div class="contenedor-item ">
+              <!-- <ion-icon slot="start" class="size-icon" src="/assets/icon/rol.svg"></ion-icon> -->
+              <ion-item lines="none" class="input-border-bot item-native-transparency">
+                <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">
+                  Placa:</ion-label>
+                <ion-input [(ngModel)]="car_plate" name="car_plate" class="text-center">
+                </ion-input>                
+              </ion-item>
+            </div>
+            <!-- <ion-item> -->
+              <!-- <ion-label position="stacked" class="text-color-purple">Descripción:</ion-label>
+              <ion-input [(ngModel)]="description" name="description"></ion-input> -->
+              <div class="contenedor-item ">
+                <!-- <ion-icon slot="start" class="size-icon" src="/assets/icon/rol.svg"></ion-icon> -->
+                <ion-item lines="none" class="input-border-bot item-native-transparency">
+                  <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">
+                    Descripción:</ion-label>
+                  <ion-input  [(ngModel)]="description" name="description" class="text-center">
+                  </ion-input>                
+                </ion-item>
+              </div>
+            <!-- </ion-item> -->
+            <!-- <ion-item> -->
+              <!-- <ion-label position="stacked"class="text-color-purple">Color:</ion-label>
+              <ion-input [(ngModel)]="color" name="color"></ion-input> -->
+              <div class="contenedor-item ">
+                <!-- <ion-icon slot="start" class="size-icon" src="/assets/icon/rol.svg"></ion-icon> -->
+                <ion-item lines="none" class="input-border-bot item-native-transparency">
+                  <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">
+                    Color:</ion-label>
+                  <ion-input [(ngModel)]="color" name="color" class="text-center">
+                  </ion-input>                
+                </ion-item>
+              </div>
+            <!-- </ion-item> -->
         
-          </ion-card>
+          <!-- </ion-card> -->
 
-        </ion-list>   
+        <!-- </ion-list>    -->
         <div class="btn-ordenar">
           <ion-button type="submit" class="boton-warmi-in" (click)="guardarCamioneta()"><ion-icon name="card-outline"></ion-icon>Guardar</ion-button>
         </div>
