--- a/src/app/c_privado/tab_ordenes/entregas/entregas.page.html
+++ b/src/app/c_privado/tab_ordenes/entregas/entregas.page.html
@@ -8,7 +8,7 @@
   <div class="border-top-page">
     <!-- Contenedor 1 -->
     <div class="contenedor-header">
-      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/w_store_1.svg">
       </ion-icon>
       <div class="texto-header">Entregas</div>
     </div>
