--- a/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.html
+++ b/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.html
@@ -2,7 +2,7 @@
   <div class="border-top-page">
     <!-- Contenedor 1 -->
     <div class="contenedor-header">
-      <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/agricultores.svg">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/w_farmer.svg">
       </ion-icon>
       <div class="texto-header">Agricultoras</div>
     </div>
