--- a/src/app/ma_acopiadora/menu/menu.page.html
+++ b/src/app/ma_acopiadora/menu/menu.page.html
@@ -6,7 +6,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="centroAcopio">
-      <ion-icon src="/assets/iconos/logo_fullcolor.svg"></ion-icon>
+      <ion-icon src="/assets/iconos/o_acopio.svg"></ion-icon>
       <ion-label class="text-color-purple text-bold">Editar Centro</ion-label>
     </ion-tab-button>
 
