--- a/src/app/ma_lideresa/geolocalizacion/geolocalizacion.page.html
+++ b/src/app/ma_lideresa/geolocalizacion/geolocalizacion.page.html
@@ -44,7 +44,7 @@
 
       <div class="border-top-page">
         <div class="contenedor-header">
-          <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/store.svg">
+          <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/w_acopio.svg">
           </ion-icon>
           <div class="texto-header">Asociación</div>
         </div>
@@ -53,38 +53,68 @@
         <br>
         <h4 class="text-center size-text35px text-bold text-color-purple">Ingresa los datos requeridos</h4>
         <form>
-          <ion-list>
-            <ion-card>
-              <ion-item>
+          <!-- <ion-list> -->
+          <!-- <ion-card> -->
+            <!-- <ion-item>
                 <ion-label position="stacked">Nombre de la asociación</ion-label>
                 <ion-input [(ngModel)]="name" name="name"></ion-input>
+              </ion-item> -->
+            <div class="contenedor-item ">
+              <ion-icon slot="start" class="size-icon" src="/assets/iconos/o_acopio.svg"></ion-icon>
+              <ion-item lines="none" class="input-border-bot item-native-transparency">
+                <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">
+                  Nombre de la asociación</ion-label>
+                <ion-input [(ngModel)]="name" type="text" name="name">
+                </ion-input>
               </ion-item>
-              <ion-card>
-                <ion-card-title class="title">
+            </div>
+            <!-- <ion-card> -->
+              <!-- <ion-card-title class="title">
                   Ventajas
                 </ion-card-title>
                 <ion-list class="items">
                   <ion-textarea [(ngModel)]="advantages" name="advantages"></ion-textarea>
-                </ion-list>
-              </ion-card>
-              <ion-card>
-                <ion-card-title class="title">
+                </ion-list> -->
+              <div class="contenedor-item ">
+                <!-- <ion-icon slot="start" class="size-icon" src="/assets/iconos/o_acopio.svg"></ion-icon> -->
+                <ion-item lines="none" class="input-border-bot item-native-transparency">
+                  <ion-label style="color: var(--warmin-color-purple);" position="floating"
+                    class="text-center text-bold">
+                    Ventajas</ion-label>
+                  <ion-textarea [(ngModel)]="advantages" name="advantages">
+                  </ion-textarea>
+                </ion-item>
+              </div>
+            <!-- </ion-card> -->
+            <!-- <ion-card> -->
+              <!-- <ion-card-title class="title">
                   Reglas
                 </ion-card-title>
                 <ion-list class="items">
                   <ion-textarea [(ngModel)]="rules" name="rules"></ion-textarea>
                 </ion-list>
-              </ion-card>
-            </ion-card>
+              </ion-card> -->
+              <div class="contenedor-item ">
+                <!-- <ion-icon slot="start" class="size-icon" src="/assets/iconos/o_acopio.svg"></ion-icon> -->
+                <ion-item lines="none" class="input-border-bot item-native-transparency">
+                  <ion-label style="color: var(--warmin-color-purple);" position="floating"
+                    class="text-center text-bold">
+                    Reglas</ion-label>
+                  <ion-textarea [(ngModel)]="rules" name="rules">
+                  </ion-textarea>
+                </ion-item>
+              </div>
+            <!-- </ion-card> -->
 
-          </ion-list>
-          <div class="btn-ordenar">
-            <ion-button type="submit" class="boton-warmi-in" (click)="guardarAsociacion()">
-              <ion-icon name="card-outline"></ion-icon>Guardar
-            </ion-button>
-          </div>
+            <!-- </ion-list> -->
+            <div class="btn-ordenar">
+              <ion-button type="submit" class="boton-warmi-in" (click)="guardarAsociacion()">
+                <ion-icon name="card-outline"></ion-icon>Guardar
+              </ion-button>
+            </div>
 
         </form>
+
       </ion-content>
     </ng-template>
   </ion-modal>
