--- a/src/app/ma_lideresa/tab_invitaciones/lista/lista.page.html
+++ b/src/app/ma_lideresa/tab_invitaciones/lista/lista.page.html
@@ -7,7 +7,7 @@
   <div class="border-top-page">
     <!-- Contenedor 1 -->
     <div class="contenedor-header">
-      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/w_invit.svg">
       </ion-icon>
       <div class="texto-header">Invitaciones</div>
     </div>
