--- a/src/app/ma_vendedora/componets/crear-notificacion/crear-notificacion.component.html
+++ b/src/app/ma_vendedora/componets/crear-notificacion/crear-notificacion.component.html
@@ -19,12 +19,13 @@
 </div>
 
 <div class="contenedor-item">
-  <ion-icon slot="start" class="size-icon" src="/assets/iconos/col.svg"></ion-icon>
+  <!-- <ion-icon slot="start" class="size-icon" src="/assets/iconos/col.svg"></ion-icon> -->
   <ion-item lines="none" class="input-border-bot item-native-transparency">
     <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">Descripción
     </ion-label>
-    <ion-input [(ngModel)]="description" type="text" [ngModelOptions]="{standalone: true}" class="text-center">
-    </ion-input>
+    
+    <ion-textarea [(ngModel)]="description" type="text" [ngModelOptions]="{standalone: true}" class="text-center">
+    </ion-textarea>
   </ion-item>
 </div>
 <div>
