--- a/src/app/ma_vendedora/menu/menu.page.html
+++ b/src/app/ma_vendedora/menu/menu.page.html
@@ -8,7 +8,7 @@
     <ion-tab-button tab="transporte">
       <!-- <ion-icon name="bus-outline"></ion-icon>
       <ion-label>Transporte</ion-label> -->
-      <ion-icon src="/assets/iconos/c.svg"></ion-icon> 
+      <ion-icon src="/assets/iconos/o_transporte.svg"></ion-icon> 
       <ion-label class="text-color-purple text-bold">Transporte</ion-label>
     </ion-tab-button>
 
@@ -16,12 +16,12 @@
 
       <!-- <ion-icon name="nutrition-outline"></ion-icon>
       <ion-label>Productos</ion-label> -->
-      <ion-icon src="/assets/iconos/c.svg"></ion-icon> 
+      <ion-icon src="/assets/iconos/o_col.svg"></ion-icon> 
       <ion-label class="text-color-purple text-bold">Productos</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="ventas">
-      <ion-icon src="/assets/iconos/c.svg"></ion-icon> 
+      <ion-icon src="/assets/iconos/o_store.svg"></ion-icon> 
       <ion-label class="text-color-purple text-bold">Ventas</ion-label>
     </ion-tab-button>
 
