--- a/src/app/login/registrarse/registrarse.page.html
+++ b/src/app/login/registrarse/registrarse.page.html
@@ -23,7 +23,10 @@
               <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">Nombres y
                 apellidos</ion-label>
               <ion-input [(ngModel)]="name" type="text" formControlName="name" class="text-center">
-              </ion-input>              
+              </ion-input>
+              <span class="error-validate" *ngIf="isSubmitted && errorControl.name.errors?.required">
+                Este campo es obligatorio.
+               </span>              
             </ion-item>
           </div>
 
@@ -33,8 +36,17 @@
             <ion-item lines="none" class="input-border-bot item-native-transparency">
               <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">Cédula
               </ion-label>
-              <ion-input [(ngModel)]="identification_card" type="text" formControlName="identification_card""
-                class="text-center"></ion-input>              
+              <ion-input [(ngModel)]="identification_card" type="text" formControlName="identification_card"
+                class="text-center"></ion-input>     
+                <span class="error-validate" *ngIf="isSubmitted && errorControl.identification_card.errors?.required">
+                  Este campo es obligatorio.
+                 </span>
+                 <span class="error-validate" *ngIf="isSubmitted && errorControl.identification_card.errors?.minlength">
+                  Ingresa una cédula válida.
+                </span>
+                <span class="error-validate" *ngIf="isSubmitted && errorControl.identification_card.errors?.pattern">
+                  Solo numeros permitidos.
+                </span>         
             </ion-item>
           </div>
 
@@ -45,7 +57,16 @@
               <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">Número de
                 celular</ion-label>
               <ion-input [(ngModel)]="phone_number" type="text" formControlName="phone_number"
-                class="text-center"></ion-input>              
+                class="text-center"></ion-input>
+                <span class="error-validate" *ngIf="isSubmitted && errorControl.phone_number.errors?.required">
+                  Este campo es obligatorio.
+                 </span> 
+                 <span class="error-validate" *ngIf="isSubmitted && errorControl.phone_number.errors?.minlength">
+                  Ingresa un número válido de 10 dígitos.
+                </span>
+                <span class="error-validate" *ngIf="isSubmitted && errorControl.phone_number.errors?.pattern">
+                  Solo numeros permitidos.
+                </span> 
             </ion-item>
           </div>
 
@@ -56,7 +77,10 @@
               <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">Contraseña
               </ion-label>
               <ion-input [(ngModel)]="password" type="password" formControlName="password"
-                class="text-center"></ion-input>              
+                class="text-center"></ion-input>
+                <span class="error-validate" *ngIf="isSubmitted && errorControl.password.errors?.required">
+                  Este campo es obligatorio.
+                 </span>               
             </ion-item>
           </div>
 
@@ -68,7 +92,10 @@
                 contraseña</ion-label>
               <ion-input [(ngModel)]="confirmate_password" type="password" formControlName="confirmate_password"
                 class="text-center">
-              </ion-input>              
+              </ion-input>
+              <span class="error-validate" *ngIf="isSubmitted && errorControl.confirmate_password.errors?.required">
+                Este campo es obligatorio.
+               </span>                
             </ion-item>
           </div>
 
@@ -85,7 +112,10 @@
                 <ion-select-option value="Consumidor">Consumidor agroecológico</ion-select-option>
                 <ion-select-option value="Agricultora">Agricultora</ion-select-option>
                 <ion-select-option value="Conductor">Conductor</ion-select-option>
-              </ion-select>                         
+              </ion-select> 
+              <span class="error-validate" *ngIf="isSubmitted && errorControl.role.errors?.required">
+                Este campo es obligatorio.
+               </span>                           
             </ion-item>
           </div>
           <!--  -->
